added header and started grid cards

--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./nav-practice.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./nav-practice.css" />
     <title>Nav Practice</title>
 </head>
+
 <body>
-    <Div>
+    <nav>
         <ul class="navbar">
-        <li  id="img" ><a href="#"><img src="./personal-computer.png"></a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Contact</a></li>
+            <li id="img">
+                <a href="#"><img src="./personal-computer.png" /></a>
+            </li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
-    </Div>
+    </nav>
+    <div class="header">
+        <div class="gradient-border">
+            <div class="border-card">
+                <h1>Science & Tech</h1>
+                <h3>News for People Like You!</h3>
+            </div>
+        </div>
+    </div>
+    <main class="main-grid-container">
+        <article class="grid-item"><h2>News Article</h2></article>
+        <article class="grid-item"><h2>News Article</h2></article>
+        <article class="grid-item"><h2>News Article</h2></article>
+        <article class="grid-item"><h2>News Article</h2></article>
+        <article class="grid-item"><h2>News Article</h2></article>
+    </main>
 </body>
+
 </html>
