changed top icon, added grid for articles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <ul class="navbar">
             <li id="img">
-                <a href="#"><img src="./personal-computer.png" /></a>
+                <a href="#"><img src="./geography.png" /></a>
             </li>
             <li><a href="#">About</a></li>
             <li><a href="#">News</a></li>
@@ -33,12 +33,16 @@
         </div>
     </div>
     <main class="main-grid-container">
-        <article class="grid-item"><h2>News Article</h2></article>
-        <article class="grid-item"><h2>News Article</h2></article>
-        <article class="grid-item"><h2>News Article</h2></article>
-        <article class="grid-item"><h2>News Article</h2></article>
-        <article class="grid-item"><h2>News Article</h2></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
     </main>
+    <footer class="flex-footer">
+        
+    </footer>
 </body>
 
 </html>
