--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
         <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
         <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
         <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
+        <article class="grid-item"><h2>News Article</h2><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quis expedita sed doloremque temporibus, natus ipsum voluptas nam similique maiores voluptatum, vero cum culpa? Voluptates doloremque quod exercitationem nisi blanditiis.</p></article>
     </main>
     <footer class="flex-footer">
-        
+        <h2>Stay Updated!</h2>
+        <form action="#" class="email-form">
+            <label for="email">Enter Your Email</label>
+            <input type="email" name="email" id="email" placeholder="Email Address Here">
+            <input type="submit" value="Submit" class="btn">
+        </form>
     </footer>
 </body>
 
