--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
     </main>
     <footer class="flex-footer">
         <h2>Stay Updated!</h2>
+        <h3>Join our mailing list</h3>
         <form action="#" class="email-form">
-            <label for="email">Enter Your Email</label>
+            <!-- <label for="email">Enter Your Email</label> -->
             <input type="email" name="email" id="email" placeholder="Email Address Here">
-            <input type="submit" value="Submit" class="btn">
+            <input type="submit" value="Subscribe" class="btn">
         </form>
     </footer>
 </body>
